--- a/src/pdf-forms/arbella-EFT.html
+++ b/src/pdf-forms/arbella-EFT.html
@@ -59,35 +59,36 @@
 <body>
 
     <div class="page page-1">
-        <img src="../images/RTA-form/MA-Operator.svg" class="form-img" />
-        <div class="page-details ma-operator">
-            <div class="operator-info">
-                <div class="answer a1"><input type="text" value='"driver excluded full name"' /></div>
-                <div class="answer a2">                    
-                    <textarea class="form-control">"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-                    </textarea>
-                </div>
+        <img src="../images/RTA-form/EFT-FORM-arbella.svg" class="form-img" />
+        <div class="page-details arbella-eft">
+            <div class="insured-info">
+                <div class="answer a1 a1-2"><span class="check-mark"></span></div>
+                <div class="answer a2"><input type="text" value="Name of the insured" /></div>
+                <div class="answer a3"><input type="text" value="Address added" /></div>
+                <div class="answer a4"><input type="text" value="City Added" /></div>
+                <div class="answer a5"><input type="text" value="State N" /></div>
+                <div class="answer a6"><input type="text" value="Code" /></div>
+                <div class="answer a7"><input type="text" value="CVS456DFS6546S" /></div>
             </div>
-            <div class="holder-info">
-                <div class="answer a1"><input type="date" value="" /></div>
-                <div class="answer a2"><input type="date" value="" /></div>
+            <div class="account-info">
+                <div class="answer a1"><input type="text" value="XFSDFSADSS" /></div>
+                <div class="answer a2"><input type="text" value="name added in bank" /></div>
+                <div class="answer a3"><span class="check-mark"></span></div>
+                <div class="answer a4"><input type="text" value="XFSDFSADDF" /></div>
+                <div class="answer monospace a5"><input type="text" value="XFSDFSADDF" /></div>
+            </div>
+            <!-- <div class="financial-info">
+                <div class="answer a1"><span class="check-mark"></span></div>
+                <div class="answer a2"><input type="text" value="answer" class="fs-14" /></div>
+                <div class="answer monospace a3"><input type="text" value="XFSDFSADD" /></div>
+                <div class="answer monospace a4"><input type="text" value="XFSDFSADDFSDSFS" /></div>
+            </div> -->
+
+            <div class="signature-info">
+                <div class="answer a1"><input class="fs-12" type="date" value="" /></div>
+                <div class="answer a2"><input class="fs-12" type="date" value="" /></div>
             </div>
 
-            <div class="insured-name-info">
-                <div class="answer a1">
-                    <textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
-City Of Boston
-7 BRAYTON AVE
-FALL RIVER MA 0277</textarea>
-                </div>
-            </div>
 
 
         </div>
