--- a/src/pdf-forms/arbella-excluison-form.html
+++ b/src/pdf-forms/arbella-excluison-form.html
@@ -59,16 +59,12 @@
 <body>
 
     <div class="page page-1">
-        <img src="../images/RTA-form/MA-Operator.svg" class="form-img" />
-        <div class="page-details ma-operator">
+        <img src="../images/RTA-form/arbella-excluison-form.svg" class="form-img" />
+        <div class="page-details arbella-eft arbella-excluison">
             <div class="operator-info">
                 <div class="answer a1"><input type="text" value='"driver excluded full name"' /></div>
-                <div class="answer a2">                    
+                <div class="answer a2">
                     <textarea class="form-control">"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
 "Year, make, model and VIN #"
 "Year, make, model and VIN #"
 "Year, make, model and VIN #"
@@ -80,14 +76,7 @@
                 <div class="answer a2"><input type="date" value="" /></div>
             </div>
 
-            <div class="insured-name-info">
-                <div class="answer a1">
-                    <textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
-City Of Boston
-7 BRAYTON AVE
-FALL RIVER MA 0277</textarea>
-                </div>
-            </div>
+
 
 
         </div>
