--- a/src/pdf-forms/arbella-suplemental.html
+++ b/src/pdf-forms/arbella-suplemental.html
@@ -59,35 +59,60 @@
 <body>
 
     <div class="page page-1">
-        <img src="../images/RTA-form/MA-Operator.svg" class="form-img" />
-        <div class="page-details ma-operator">
-            <div class="operator-info">
-                <div class="answer a1"><input type="text" value='"driver excluded full name"' /></div>
-                <div class="answer a2">                    
-                    <textarea class="form-control">"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-                    </textarea>
-                </div>
-            </div>
-            <div class="holder-info">
-                <div class="answer a1"><input type="date" value="" /></div>
-                <div class="answer a2"><input type="date" value="" /></div>
+        <img src="../images/RTA-form/arbella-suplemental-form.svg" class="form-img" />
+        <div class="page-details arbella-eft arbella-suplemental">
+            <div class="page-about">
+                <div class="answer a1"><input type="text" value="Name 0" /></div>
+                <div class="answer a2"><input type="text" value="Name 1" /></div>
+                <div class="answer a3"><input type="date" value="" /></div>
             </div>
 
-            <div class="insured-name-info">
-                <div class="answer a1">
-                    <textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
-City Of Boston
-7 BRAYTON AVE
-FALL RIVER MA 0277</textarea>
-                </div>
+            <div class="insured-info">
+                <div class="answer a1 other-true"><span class="check-mark "><input type="text" value="Anthing" 
+                    id="b4-other" /></span></div>
+                <div class="answer a2 other-true"><span class="check-mark">
+                    <input type="text" value="Anthing" id="a2-1-other" />
+                    <input type="text" value="Anthing" id="a2-2-other" />
+                    <input type="text" value="Anthing" id="a2-3-other" />
+                </span></div>
+                <div class="answer a3"><span class="check-mark "></span></div>
+                <div class="answer a4"><span class="check-mark "></span></div>
+                <div class="answer a5"><input type="text" value="State N" /></div>
+                <div class="answer a6"><input type="text" value="Code" /></div>
+                <div class="answer a7"><input type="text" value="CVS456DFS6546S" /></div>
+                <div class="answer a8"><span class="check-mark "></span></div>
+                <div class="answer a9"><input type="text" value="CVS456DFS6546S" /></div>
+                <div class="answer a10 a10-2"><span class="check-mark "></span></div>
+                <div class="answer a11 a11-2"><span class="check-mark "></span></div>
+                <div class="answer a12 a12-2"><span class="check-mark "></span></div>
             </div>
+
+            <div class="account-info">
+                
+                <div class="answer a1"><input type="text" value="Anything" /></div>
+                <div class="answer a2"><input type="text" value="Anything" /></div>
+                <div class="answer a3"><input type="text" value="Anything" /></div>
+                <div class="answer a4"><input type="text" value="Anything" /></div>
+                <div class="answer b1 b1-2"><span class="check-mark "></span></div>
+                <div class="answer b1 b2 b1-2"><span class="check-mark "></span></div>
+                <div class="answer b1 b3 b1-2"><span class="check-mark "></span></div>
+                <div class="answer b1 b4 b1-2"><span class="check-mark "></span></div>
+                <div class="answer c1 c1-2"><span class="check-mark "></span></div>
+                <div class="answer c1 c2 c1-2"><span class="check-mark "></span></div>
+                <div class="answer c1 c3 c1-2"><span class="check-mark "></span></div>
+                <div class="answer c1 c4 c1-2"><span class="check-mark "></span></div>
+                <div class="answer d1 d1-2"><span class="check-mark "></span></div>
+                <div class="answer d1 d2 d1-2"><span class="check-mark "></span></div>
+                <div class="answer d1 d3 d1-2"><span class="check-mark "></span></div>
+                <div class="answer d1 d4 d1-2"><span class="check-mark "></span></div>
+                <div class="answer d1 d5 d1-2"><span class="check-mark "></span></div>
+            </div>
+
+            <div class="signature-info">
+                <div class="answer a1"><input class="fs-12" type="date" value="" /></div>
+                <div class="answer a2"><input class="fs-12" type="date" value="" /></div>
+            </div>
+
 
 
         </div>
