--- a/src/pdf-forms/safec-eft.html
+++ b/src/pdf-forms/safec-eft.html
@@ -59,35 +59,15 @@
 <body>
 
     <div class="page page-1">
-        <img src="../images/RTA-form/MA-Operator.svg" class="form-img" />
-        <div class="page-details ma-operator">
-            <div class="operator-info">
-                <div class="answer a1"><input type="text" value='"driver excluded full name"' /></div>
-                <div class="answer a2">                    
-                    <textarea class="form-control">"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-                    </textarea>
-                </div>
-            </div>
+        <img src="../images/RTA-form/safec-eft.svg" class="form-img" />
+        <div class="page-details safec-eft">
             <div class="holder-info">
-                <div class="answer a1"><input type="date" value="" /></div>
-                <div class="answer a2"><input type="date" value="" /></div>
+                <div class="answer a0"><input type="text" value="Day" /></div>
+                <div class="answer a1"><input type="text" value="Name" /></div>
+                <div class="answer a2"><input type="text" value="Acc Number" /></div>
+                <div class="answer a3"><input type="date" value="" /></div>
             </div>
 
-            <div class="insured-name-info">
-                <div class="answer a1">
-                    <textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
-City Of Boston
-7 BRAYTON AVE
-FALL RIVER MA 0277</textarea>
-                </div>
-            </div>
 
 
         </div>
