--- a/src/pdf-forms/safeco-exclusion.html
+++ b/src/pdf-forms/safeco-exclusion.html
@@ -59,35 +59,23 @@
 <body>
 
     <div class="page page-1">
-        <img src="../images/RTA-form/MA-Operator.svg" class="form-img" />
-        <div class="page-details ma-operator">
-            <div class="operator-info">
-                <div class="answer a1"><input type="text" value='"driver excluded full name"' /></div>
-                <div class="answer a2">                    
-                    <textarea class="form-control">"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-                    </textarea>
-                </div>
-            </div>
-            <div class="holder-info">
-                <div class="answer a1"><input type="date" value="" /></div>
-                <div class="answer a2"><input type="date" value="" /></div>
-            </div>
-
-            <div class="insured-name-info">
-                <div class="answer a1">
-                    <textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
+        <img src="../images/RTA-form/safeco-exclusion.svg" class="form-img" />
+        <div class="page-details safec-eft">
+            <div class="exlusion-info">
+                <div class="answer a0"><input type="text" value="Jhone Doe" /></div>
+                <div class="answer a1"><textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
 City Of Boston
 7 BRAYTON AVE
-FALL RIVER MA 0277</textarea>
-                </div>
+FALL RIVER MA 0277</textarea></div>
+                    <div class="answer a2"><input type="text" value="XSDFGSD7545" /></div>
             </div>
+            <div class="signature-info">
+                <div class="answer a0"><input type="text" value="HR" /></div>
+                <div class="answer a1"><input type="text" value="MM" /></div>
+                <div class="answer a2"><input type="text" value="DD" /></div>
+                <div class="answer a3"><input type="text" value="YYYY" /></div>
+            </div>
+
 
 
         </div>
