--- a/src/pdf-forms/safety-ef-form.html
+++ b/src/pdf-forms/safety-ef-form.html
@@ -59,38 +59,44 @@
 <body>
 
     <div class="page page-1">
-        <img src="../images/RTA-form/MA-Operator.svg" class="form-img" />
-        <div class="page-details ma-operator">
-            <div class="operator-info">
-                <div class="answer a1"><input type="text" value='"driver excluded full name"' /></div>
-                <div class="answer a2">                    
-                    <textarea class="form-control">"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-                    </textarea>
-                </div>
+        <img src="../images/RTA-form/safety-ef-form.svg" class="form-img" />
+        <div class="page-details safety-ef-form">
+            <div class="insured-info">
+                <div class="answer a0"><input type="text" value="Jhone Doe" /></div>
+                <div class="answer a1"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a2"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a3"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a4"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a5"><input type="text" value="XSDFGSD7545" /></div>
             </div>
-            <div class="holder-info">
-                <div class="answer a1"><input type="date" value="" /></div>
-                <div class="answer a2"><input type="date" value="" /></div>
+            <div class="account-info">
+                <div class="answer monospace a1"><input type="text" value="XFSDFSADSS" /></div>
+                <div class="answer monospace a2"><input type="text" value="XF" /></div>
+                <div class="answer monospace a3"><input type="text" value="XFSDFSADFD" /></div>
+                <div class="answer monospace a4"><input type="text" value="XF" /></div>
+                <div class="answer monospace a5"><input type="text" value="XFSDFSADDF" /></div>
+                <div class="answer monospace a6"><input type="text" value="XF" /></div>
+                <div class="answer monospace a7"><input type="text" value="XF" /></div>
+            </div>
+            <div class="financial-info">
+                <div class="answer a1"><span class="check-mark"></span></div>
+                <div class="answer a2"><input type="text" value="answer" class="fs-14" /></div>
+                <div class="answer monospace a3"><input type="text" value="XFSDFSADD" /></div>
+                <div class="answer monospace a4"><input type="text" value="XFSDFSADDFSDSFS" /></div>
             </div>
 
-            <div class="insured-name-info">
-                <div class="answer a1">
-                    <textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
-City Of Boston
-7 BRAYTON AVE
-FALL RIVER MA 0277</textarea>
-                </div>
+            <div class="signature-info">
+                <div class="answer a1"><input class="fs-14" type="date" value="" /></div>
             </div>
+
 
 
         </div>
+    </div>
+
+
+    <div class="page page-2">
+        <img src="../images/RTA-form/safety-ef-form-2.svg" class="form-img" />
     </div>
 
 
