--- a/src/pdf-forms/travelers-card-EFT.html
+++ b/src/pdf-forms/travelers-card-EFT.html
@@ -59,35 +59,31 @@
 <body>
 
     <div class="page page-1">
-        <img src="../images/RTA-form/MA-Operator.svg" class="form-img" />
-        <div class="page-details ma-operator">
-            <div class="operator-info">
-                <div class="answer a1"><input type="text" value='"driver excluded full name"' /></div>
-                <div class="answer a2">                    
-                    <textarea class="form-control">"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-"Year, make, model and VIN #"
-                    </textarea>
+        <img src="../images/RTA-form/travelers-eft-form.svg" class="form-img" />
+        <div class="page-details trevelor-eft trevelor-eft-autopay">
+            <div class="insured-info">
+                <div class="answer a0"><input type="text" value="Jhone Doe" /></div>
+                <div class="answer a1">
+                    <textarea name="" id="" cols="30" rows="5" class="form-control">City Of Boston
+7 BRAYTON AVE</textarea>
                 </div>
+                <div class="answer a2"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a3"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a4"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a6"><input type="text" value="XSDFGSD7545" /></div>
+                <div class="answer a7"><input type="text" value="XSDFGSD754529" /></div>
+                <div class="answer a8"><input type="number" value="10" /></div>
+                <div class="answer a9"><input type="date" value="" /></div>
+                <div class="answer a10 a10-1"><span class="check-mark"></span></div>
+                <div class="answer a11 a11-1"><span class="check-mark"></span></div>
             </div>
-            <div class="holder-info">
-                <div class="answer a1"><input type="date" value="" /></div>
-                <div class="answer a2"><input type="date" value="" /></div>
+            <div class="signature-info">
+                <div class="answer a0"><input type="text" value="HR" /></div>
+                <div class="answer a1"><input type="text" value="MM" /></div>
+                <div class="answer a2"><input type="text" value="DD" /></div>
+                <div class="answer a3"><input type="text" value="YYYY" /></div>
             </div>
 
-            <div class="insured-name-info">
-                <div class="answer a1">
-                    <textarea name="" id="" cols="30" rows="5" class="form-control">JohnDo
-City Of Boston
-7 BRAYTON AVE
-FALL RIVER MA 0277</textarea>
-                </div>
-            </div>
 
 
         </div>
