fix edit icon and create no result found section

--- a/src/admin-panel/summary-vehicle-1.html
+++ b/src/admin-panel/summary-vehicle-1.html
@@ -135,6 +135,8 @@
 
                         <h3 class="title  text-left mb-3">Policy Summary</h3>
                         <div class="blue-light-box  px-3 py-4">
+                            <a href="#" class="edit-icon"> <img src="../images/edit.png"
+                                class="img-fluid " /></a>
                             <div class="row">
                                 <div class="col-md-6">
                         <div class="d-flex align-items-center justify-content-start flex-wrap mb-2">
