--- a/src/home-insurance/33-kitchen.html
+++ b/src/home-insurance/33-kitchen.html
@@ -1426,8 +1426,13 @@ ul li button{
 
                                                   <div class="accordion custom p-3" id="accordionExample">
                                                     <div class="input-group search mb-2">
-                                                        <img class="" src="../images/search.svg">
+                                                        <img class="" src="../images/search.svg" alt="Search Icon">
                                                         <input class="form-control" type="search" placeholder="Search outside home...">
+                                                    </div>
+                                                    <div class="no_result_found">
+                                                        <img src="../images/no-search.svg" alt="">
+                                                        <h4 class="title fs-18 mt-4 mb-2">No Result Found</h4>
+                                                        <p class="text-gray fs-16">We can't find any item matching your search. Try adjusting your search...</p>
                                                     </div>
                                 <div class="accordion-item mb-3  border">
                                     <h2 class="accordion-header" id="headingOne">
