add new input fields in add policy manually page

--- a/src/admin-panel/add-policy-manually.html
+++ b/src/admin-panel/add-policy-manually.html
@@ -252,8 +252,22 @@
                                             <input class="form-control addPrefer" type="text"
                                                 placeholder="Carrier Name" />
                                         </div>
-                                       
-                                     
+                                        <div class="col-6">
+                                            <div class="f-group max-width-100">
+                                                <select class="f-control f-dropdown" placeholder="Producer"
+                                                    id="multiple" class="js-states form-control">
+                                                    <option value="">Producer</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="f-group max-width-100">
+                                                <select class="f-control f-dropdown" placeholder="CSR"
+                                                    id="multiple" class="js-states form-control">
+                                                    <option value="">CSR</option>
+                                                </select>
+                                            </div>
+                                        </div>
                                         <div class="col-4">
                                             <div class="f-group max-width-100">
 
