--- a/src/client-profile/client-profile-2.html
+++ b/src/client-profile/client-profile-2.html
@@ -215,7 +215,7 @@
                             </div>
                         </div> <!-- /search-box -->
 
-                        <div class="accordion custom" id="accordionPolicy">
+                        <div class="accordion custom client-profile-cards" id="accordionPolicy">
                             <div class="accordion-item accordion-blue">
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button accordion-blue collapsed" type="button"
@@ -1462,6 +1462,15 @@
 
                                 <div class="form-group mb-3">
                                     <input type="email" placeholder="Enter Someone’s Email" class="form-control">
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label class="checkbox-inline mb-0 w-auto" for="certificateRenewal">
+                                        <input class="checkbox-control" type="checkbox" value="" id="certificateRenewal" checked=""/>
+                                        <span class="checkbox-custom"></span>
+                                        <span class="checkbox-label fs-14 mb-0">
+                                            Send Certificate automatically renewal every year
+                                        </span>
+                                    </label>
                                 </div>
                             </div>
                             
