--- a/src/pdf-forms/RTA-form-img.html
+++ b/src/pdf-forms/RTA-form-img.html
@@ -103,7 +103,6 @@
 
         .answer .check-mark {
             position: absolute;
-            background-image: url(../images/RTA-form/checkmark-icon.png);
             background-size: contain;
             background-color: transparent;
             background-position: center;
@@ -1354,15 +1353,16 @@
                 <div class="answer a1"><input type="text" value="AnswerA1" /></div>
                 <div class="answer a2"><input type="text" value="AnswerA2" /></div>
                 <div class="answer a3 a3-1"><span class="check-mark"></span></div>
-                <div class="answer a4 a4-10 other-true"><span class="check-mark"><input type="text" value="Anthing"
+                <div class="answer a4 a4-10 other-true"><span class="check-mark"><img src="../images/RTA-form/checkmark-icon.png"><input type="text" value="Anthing"
                             id="a4-other" /></span></div>
             </div>
             <div class="b-block">
                 <div class="answer b1"><input type="text" value="SDJFHK4544SDJF" /></div>
                 <div class="answer b2"><input type="text" value="Anthing" /></div>
-                <div class="answer b3 b3-6 other-true"><span class="check-mark"><input type="text" value="Anthing"
+                <div class="answer b3 b3-6 other-true"><span class="check-mark"><img src="../images/RTA-form/checkmark-icon.png"><input type="text" value="Anthing"
                             id="b3-other" /></span></div>
-                <div class="answer b4 b4-12"><span class="check-mark"><input type="text" value="Anthing"
+                <div class="answer b4 b4-12"><span class="check-mark">
+                    <img src="../images/RTA-form/checkmark-icon.png"> <input type="text" value="Anthing"
                             id="b4-other" /></span></div>
                 <div class="answer b5">
                     <input type="text" value="Anthing" id="b5-year" />
@@ -1572,7 +1572,7 @@
                 <div class="answer k4 k4-1"><span class="check-mark"></span></div>
                 <div class="answer k5"><input type="text" value="MM/DD/YYYY"></div>
                 <div class="answer k6">
-                    <img src="../images/RTA-form/" alt="Signature" />
+                    <img src="../images/RTA-form/commerce-stamp-decio.png" alt="Signature" />
                 </div>
             </div>
 
