--- a/src/client-profile/claim-7.html
+++ b/src/client-profile/claim-7.html
@@ -175,7 +175,7 @@
                             </div>
 
                             <div class="contain-wrapper-sm">
-                                <div class="container-fluid claim-additional-info mt-4 bg-white border border-1 rounded-3">
+                                <div class="container-fluid claim-additional-info mt-4 bg-white border border-1">
                                     <div class="row g-3">
                                         <div class="col-md-12 col-12">
                                             <input class="form-control addMain" type="text"
