Design fixes for admin pannel

--- a/src/admin-panel/admin-panel-1.html
+++ b/src/admin-panel/admin-panel-1.html
@@ -128,16 +128,17 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main full-size">
+            <div class="content-main admin-section-container  full-size">
                 <div class="content">
-                    <div class="container pt-5">
+                    <div class="container pt-4">
 
                         <div class="serach-box">
                             <p class="text-black fs-16 mb-2 fw-600 ">Search Client Here</p>
                             <!-- <h3 class="fw-600"></h3> -->
                             <div class="input-group search">
                                 <img class="" src="../images/search.svg">
-                                <input class="form-control" type="search" placeholder="Search by Phone#, License#, Vin#, Name anything :)" />
+                                <input class="form-control" type="search"
+                                    placeholder="Search by Phone#, License#, Vin#, Name anything :)" />
                             </div>
                         </div> <!-- /search-box -->
 
@@ -151,74 +152,78 @@
                                     </colgroup>
                                     <tr>
                                         <th class="link-label fs-14">
-                                           Client Name
+                                            Client Name
                                         </th>
                                         <th class="link-label fs-14">
                                             Email
                                         </th>
                                         <th class="link-label fs-14">
-                                            VIN
+                                            Phone Number
                                         </th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr class="policy-table-card">
                                         <td>
-                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2" src="../images/Avatar.svg" alt=""> John Doe</a>
+                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2"
+                                                    src="../images/Avatar.svg" alt=""> John Doe</a>
                                         </td>
                                         <td>
                                             Jerryhelfer@email.com
                                         </td>
                                         <td>
-                                            XSS5465ASDX
+                                            (503) 338-2573
                                         </td>
                                     </tr>
                                     <tr class="policy-table-card">
                                         <td>
-                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2" src="../images/Avatar.svg" alt=""> John Doe</a>
+                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2"
+                                                    src="../images/Avatar-2.svg" alt=""> Travis hed</a>
                                         </td>
                                         <td>
                                             Jerryhelfer@email.com
                                         </td>
                                         <td>
-                                            XSS5465ASDX
+                                            (503) 338-2573
                                         </td>
                                     </tr>
                                     <tr class="policy-table-card">
                                         <td>
-                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2" src="../images/Avatar.svg" alt=""> John Doe</a>
+                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2"
+                                                    src="../images/Avatar.svg" alt=""> John Doe</a>
                                         </td>
                                         <td>
                                             Jerryhelfer@email.com
                                         </td>
                                         <td>
-                                            XSS5465ASDX
+                                            (503) 338-2573
                                         </td>
                                     </tr>
                                     <tr class="policy-table-card">
                                         <td>
-                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2" src="../images/Avatar.svg" alt=""> John Doe</a>
+                                            <a href="" class="d-flex align-items-center"> <img class="ïmg-circle me-2"
+                                                    src="../images/Avatar-2.svg" alt=""> Travis hed</a>
                                         </td>
                                         <td>
                                             Jerryhelfer@email.com
                                         </td>
                                         <td>
-                                            XSS5465ASDX
+                                            (503) 338-2573
                                         </td>
                                     </tr>
-                                    
+
                                 </tbody>
                             </table>
                         </div>
 
-                        <div class="cta-block d-flex align-items-center justify-content-center">
-                            <button class="btn btn-white btn-white btn-lg rounded-0 my-2">
+                        <div class="cta-block mt-3 d-flex align-items-center justify-content-center">
+                            <button class="btn h-auto">
                                 <img src="../images/add-pluse-circle.svg" />
-                                <span>Add new Client</span>
+                                <span class="ms-2 fs-12 text-blue">Add new Client</span>
                             </button>
                         </div> <!-- /cta-block -->
 
-                        
+
                     </div>
                 </div>
             </div>
