--- a/src/admin-panel/admin-panel-4.html
+++ b/src/admin-panel/admin-panel-4.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main full-size">
+            <div class="content-main admin-section-container  full-size">
 
                 <div class="content bg-white">
                     <div class="container mt-5 pt-5">
