--- a/src/admin-panel/coverage-edit.html
+++ b/src/admin-panel/coverage-edit.html
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                 </nav>
-                <div class="content-main">
+                <div class="content-main admin-section-container ">
                     <div class="content">
 
                         <div class="container mt-5 remarket-tab">
