--- a/src/admin-panel/edit-profile.html
+++ b/src/admin-panel/edit-profile.html
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                 </nav>
-                <div class="content-main full-size">
+                <div class="content-main admin-section-container full-size">
                     <div class="content">
                         <div class="container mt-5 pt-5">
                             <div class="user-card d-block">
