--- a/src/admin-panel/employee-manage-1.html
+++ b/src/admin-panel/employee-manage-1.html
@@ -46,7 +46,7 @@
     <main>
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
-                <div class="container-fluid text-center">
+                <div class="container-fluid  text-center">
 
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main full-size">
+            <div class="content-main admin-section-container full-size">
                 <div class="content">
                     <div class="container pt-5">
 
