--- a/src/admin-panel/employee-manage-3.html
+++ b/src/admin-panel/employee-manage-3.html
@@ -129,7 +129,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main">
+            <div class="content-main admin-section-container ">
                 <div class="content">
                  
                     <div class="container mt-5 pt-5">
