--- a/src/admin-panel/location-coverages-edit.html
+++ b/src/admin-panel/location-coverages-edit.html
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main">
+            <div class="content-main admin-section-container ">
                 <div class="content">
 
                     <div class="container mt-5 remarket-tab">
