home insurance page design update

--- a/src/home-insurance/2-renovation.html
+++ b/src/home-insurance/2-renovation.html
@@ -197,7 +197,7 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title  text-center">Will you be doing any renovations or new construction on this property?</h3>
+                        <h3 class="title  text-center">Will you be doing any renovations</h3>
                         <div class="contain-wrapper-sm d-flex justify-content-center">
                            
                             
