--- a/src/home-insurance/1.4-new-purchase.html
+++ b/src/home-insurance/1.4-new-purchase.html
@@ -197,40 +197,38 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title  text-center">Rental Information</h3>
-                        
+                        <h3 class="title  text-center">Property Details</h3>
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
-                                <div class="blue-light-box bg-white">
-                                    <div class="d-flex justify-content-between">
-                                    </div>
-                                    <div class="vehicle-details">
-                                        <div class="row g-3">
-                                            <div class="col-12">
-                                                <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" ># of units rented out?</label>
-                                                    <input type="text" placeholder="No. of units" class="form-control">
-                                                </div>
-                                            </div>
-                                            <div class="col-12">
-                                                <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" >Total monthly Income for all units combined?</label>
-                                                    <div class="input-group form-control px-0">
-                                                        <span class="input-group-append ">
-                                                            <span class="input-group-text border-0 bg-white d-block pe-0">
-                                                                $
-                                                            </span>
-                                                        </span>
-                                                        <input type="text" class="" id="Enter amount" placeholder="Enter amount" />
-                                                    </div>
-                                                </div>
-                                            </div>
+                                <div class="blue-light-box yes-box px-3 bg-white">
+                                    <h5 class="fs-16 text-left">Is this property is New Purchase?</h5>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <label class="radio-inline w-100 d-block radio-btn text-center" for="newPurchase1">
+                                                <input class="radio-control" type="radio" name="newPurchase"
+                                                    value="" id="newPurchase1" checked="">
+                                                <span class="radio-custom"></span>
+                                                <span class="radio-label fs-14 w-100">Yes </span>
+                                            </label>
+                                        </div>
+                                        <div class="col-6">
+                                            <label class="radio-inline w-100 d-block radio-btn  text-center" for="newPurchase2">
+                                                <input class="radio-control" type="radio" name="newPurchase"
+                                                    value="" id="newPurchase2" checked="">
+                                                <span class="radio-custom"></span>
+                                                <span class="radio-label fs-14 w-100">No </span>
+                                            </label>
+                                        </div>
+                                        <div class="col-12 col-md-12 mt-3">
+                                            <input class="form-control" type="text" placeholder="# of year owned">
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
-                                </button>
                             </form>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -244,8 +242,6 @@
         </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js">
         </script>
 
     <script src="../js/app.js"></script>
@@ -264,16 +260,7 @@
                     '.customize-options').hide())
             })
         })
-
-        $(function () {
-            $('#datepicker').datepicker({
-                autoclose: true,
-
-            });
-        });
     </script>
-
-    
 
 </body>
 
