--- a/src/home-insurance/1.5-property-cost.html
+++ b/src/home-insurance/1.5-property-cost.html
@@ -197,40 +197,75 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title  text-center">Rental Information</h3>
-                        
+                        <h3 class="title  text-center">Property Cost & Address</h3>
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
-                                <div class="blue-light-box bg-white">
-                                    <div class="d-flex justify-content-between">
+                                <div class="col-md-12 col-12 mb-3">
+                                    <h5 class="fs-18">Purchase Price</h5>
+                                    <div class="input-group date form-control px-0 mt-3">
+                                        <span class="input-group-append ">
+                                            <span class="input-group-text border-0 bg-white d-block pe-0">
+                                                $
+                                            </span>
+                                        </span>
+                                        <input type="text" class="" id="Cost" placeholder="Cost" />
                                     </div>
+                                </div>
+                                <div class="blue-light-box bg-white">
                                     <div class="vehicle-details">
                                         <div class="row g-3">
-                                            <div class="col-12">
-                                                <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" ># of units rented out?</label>
-                                                    <input type="text" placeholder="No. of units" class="form-control">
+                                            <div class="col-md-12 col-12">
+                                                <h5 class="fs-18">Prior address details</h5>
+                                                <input class="form-control addMain" type="text"
+                                                    placeholder="Street Address">
+                                            </div>
+                                            <div class="col-4">
+                                                <div class="f-group max-width-100">
+
+                                                    <div class="f-dropdown selectDropdown"><select
+                                                            class="f-control f-dropdown" placeholder="City"
+                                                            id="selectCity">
+                                                            <option value="">Select City</option>
+                                                            <option value="1">city 1
+                                                            </option>
+                                                            <option value="2">city 2
+                                                            </option>
+
+                                                        </select>
+
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="col-12">
-                                                <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" >Total monthly Income for all units combined?</label>
-                                                    <div class="input-group form-control px-0">
-                                                        <span class="input-group-append ">
-                                                            <span class="input-group-text border-0 bg-white d-block pe-0">
-                                                                $
-                                                            </span>
-                                                        </span>
-                                                        <input type="text" class="" id="Enter amount" placeholder="Enter amount" />
+                                            <div class="col-4">
+                                                <div class="f-group max-width-100">
+
+                                                    <div class="f-dropdown selectDropdown"><select
+                                                            class="f-control f-dropdown" placeholder="state"
+                                                            id="selectState">
+                                                            <option value="">Select State</option>
+                                                            <option value="1">State 1
+                                                            </option>
+                                                            <option value="2">State 2
+                                                            </option>
+
+                                                        </select>
+
                                                     </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-4">
+                                                <div class="form-group">
+                                                    <input type="text" placeholder="ZIP Code" class="form-control">
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
-                                </button>
                             </form>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -244,8 +279,6 @@
         </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js">
         </script>
 
     <script src="../js/app.js"></script>
@@ -264,16 +297,7 @@
                     '.customize-options').hide())
             })
         })
-
-        $(function () {
-            $('#datepicker').datepicker({
-                autoclose: true,
-
-            });
-        });
     </script>
-
-    
 
 </body>
 
