--- a/src/home-insurance/3-renovation-or-cunstruction.html
+++ b/src/home-insurance/3-renovation-or-cunstruction.html
@@ -197,7 +197,7 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title  text-center">Renovations or new construction</h3>
+                        <h3 class="title  text-center">Renovations</h3>
                         
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
@@ -208,13 +208,13 @@
                                         <div class="row g-3">
                                             <div class="col-12">
                                                 <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" >How long do you think it will take to complete</label>
+                                                    <label for="" class="fs-18 font-bold" >Estimate time to complete</label>
                                                     <input type="text" placeholder="No. of months" class="form-control">
                                                 </div>
                                             </div>
                                             <div class="col-12">
                                                 <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" >How much do you estimate this will cost to complete.</label>
+                                                    <label for="" class="fs-18 font-bold" >Estimate cost to complete.</label>
                                                     <input type="text" placeholder="Enter amount" class="form-control">
                                                 </div>
                                             </div>
@@ -230,7 +230,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary  mx-3 mt-4"><span>Continue</span>
+                                <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </form>
                     </div>
